@@ -1,5 +1,5 @@
 #! /bin/sh -vx
-# $Id: mendex.test 58575 2021-03-21 08:54:52Z takuji $
+# $Id: mendex.test 58708 2021-04-03 01:35:59Z takuji $
 # Copyright 2017 Karl Berry <tex-live@tug.org>
 # Copyright 2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
@@ -7,7 +7,7 @@
 TEXMFCNF=$srcdir/../kpathsea
 export TEXMFCNF
 
-rm -f foo.*
+rm -f foo.* uni.* pprec*.*
 
 ./mendex $srcdir/tests/foo.idx -o foo.ind1 -t foo.ilg1 \
 	&& diff $srcdir/tests/foo.ind foo.ind1 || exit 1
